fix: z-index messed with event target

--- a/style.css
+++ b/style.css
@@ -87,9 +87,15 @@ body {
 .game-is-live-screen {
   display: grid;
   justify-content: center;
-  grid-template-columns: min-content 50px min-content;
+  grid-template-columns: min-content min-content;
   grid-template-rows: min-content;
   column-gap: 15px;
+}
+
+.switch-turn-screen {
+  grid-row: 1/2;
+  grid-column: 1/-1;
+  z-index: 3;
 }
 
 .place-ships-screen {
@@ -194,4 +200,6 @@ div.sunk {
 .section {
   display: grid;
   grid-template-columns: min-content min-content;
+  grid-row: 1/2;
+  z-index: 1;
 }
